--- a/mavinx/src/components/style.css
+++ b/mavinx/src/components/style.css
@@ -77,3 +77,18 @@
   border-radius: 10px;
   background-color: rgba(192, 192, 192, 0.74);
 }
+.reg-form {
+  margin: auto;
+  display: flex;
+  border: 1px rgba(0, 0, 0, 0.61) solid;
+  border-radius: 10px;
+  padding: 10px;
+}
+.reg1 {
+  width: 100%;
+  height: 700px;
+}
+.reg2 {
+  display: flex;
+  flex-direction: column;
+}
